# TahomaRemote

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Readme.md  TahomaRemote.ioc
App/: App.cpp  App.h  ClosureSlider.cpp  ClosureSlider.h  Dbg.c  Dbg.h  ESP8266_AT.cpp  ESP8266_AT.h  LEDDriver.cpp  LEDDriver.h  RGBLed.h  StreamBuffer.cpp  StreamBuffer.h  System.cpp  System.h  TahomaEventParser.cpp  TahomaEventParser.h  TahomaManager.cpp  TahomaManager.h  TahomaSetupParser.cpp  TahomaSetupParser.h  config_example.h  utils.h
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  usart.c
ESP/: uploadATFW.sh
Test/: CMakeLists.txt  CMakePresets.json  ST_Firmware_Test.code-workspace  TahomaEventParserTest.cpp  TahomaSampleEvent.json
cmake/stm32cubemx/: CMakeLists.txt
hardware/Case/: TahomaRemoteCase-Body.3mf  TahomaRemoteCase-Body.stl  TahomaRemoteCase.FCStd
hardware/TahomaRemote/: TahomaRemote.kicad_pcb  TahomaRemote.kicad_prl  TahomaRemote.kicad_pro  TahomaRemote.kicad_sch
hardware/TahomaRemote/bom/: ibom.html
hardware/TahomaRemote/plot/: TahomaRemote.plt
hardware/TahomaRemote/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
